# WoWs-QBotPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.json  app_id.txt  cqcppcmake.txt  patterns_config.json
src/: Global.hpp  Pattern.cpp  Pattern.hpp  PatternController.cpp  PatternController.hpp  QBotInit.cpp  QBotUtils.cpp  QBotUtils.hpp  Renderer.cpp  Renderer.hpp  Utils.hpp  mainwindow.ui
